[package]
name = "letters2head"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.0"
egui_extras = "0.20.0"
eframe = { version = "0.20.0"}
image = { version = "0.24", features = ["jpeg", "png"] }
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_json = "1.0.86"
log = "0.4.17"
rand = "0.8.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2